# nah

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-CHANGE.md  NOTICE.md  README.md  default.nix  flake.nix  mkdocs.yml  pyproject.toml
.beads/: .gitignore  metadata.json
.claude-plugin/: marketplace.json
.claude/commands/: nah-demo.md
.github/workflows/: deploy-docs.yml  nix.yml  publish.yml  test.yml
.molds/archive/: nah-5no.md  nah-nnj.md
autoharden/: program.md
benchmarks/: README.md  novita_bash_friction.py
docs/benchmarks/: novita-bash-friction.md
plugins/nah/: README.md  SUBMISSION.md
scripts/: build_claude_plugin.py  check_release.py  publish_claude_marketplace.py
site/: CNAME  cli.md  how-it-works.md  index.md  install.md  license.md  privacy.md  threat-model.md
site/configuration/: actions.md  classification-rules.md  claude-code.md  content.md  database.md  index.md  llm.md  profiles.md  provenance.md  safety-lists.md  sensitive-paths.md  taint-tracking.md
site/guides/: airgapped.md  claude-commands.md  custom-taxonomy.md  getting-started.md  sensitive-data.md  (+2 more)
tests/: conftest.py  test_agents.py  test_api_intent.py  test_apply_patch.py  test_audit_threat_model.py  test_bash.py  test_bash_var_expansion.py  test_classify_recheck.py  test_classify_unknown.py  test_cli.py  test_codex_authority.py  test_codex_hooks.py  test_codex_preflight.py  test_codex_probe.py  test_codex_run.py  test_config.py  test_content.py  test_context.py  test_demo_battery.py  test_devin_hooks.py  test_fd014_cleanup.py  test_fd025_verify.py  test_fd079_script_exec.py  test_fd080_write_llm.py  test_hint.py  test_hint_battery.py  test_hook_classify.py  test_hook_command.py  test_hook_integration.py  test_hook_llm.py  test_hook_robustness.py  test_keyring.py  test_layer1_wiring.py  test_llm.py  test_llm_keys.py  test_llm_live.py  test_llm_relax.py  test_llm_risks.py  test_llm_transcript.py  test_llm_unified.py  (+14 more)
(+137 files in other folders)
