[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nah"
version = "0.8.2"
description = "Action-aware permissions for coding agents."
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Manuel Schipper" },
]
keywords = ["agents", "terminal", "claude", "claude-code", "codex", "safety", "guard", "hooks", "security", "permissions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = ["pytest"]
config = ["pyyaml>=6.0"]
keys = ["keyring>=25.0"]
docs = ["mkdocs-material>=9.0"]

[project.scripts]
nah = "nah.cli:main"

[project.urls]
Homepage = "https://github.com/manuelschipper/nah"
Documentation = "https://nah.build/"
Issues = "https://github.com/manuelschipper/nah/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  "docs/",
  "tests/",
  "assets/",
  "plugins/",
  "site/",
  ".claude/",
  ".github/",
  "scripts/",
  "mkdocs.yml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nah"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Ensure the repo-local `src/` is on sys.path before any editable install.
# Without this, a git worktree running `pytest` would import `nah` from the
# main checkout via the editable .pth file instead of the worktree's source,
# silently testing the wrong code. Pytest resolves this entry relative to
# rootdir, so it Just Works in worktrees.
pythonpath = ["src"]
